Implement user auth apis

--- a/server/Nautilus.Api/appsettings.Development.json
+++ b/server/Nautilus.Api/appsettings.Development.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "UseMockDatabase": true,
+  "UseMockDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=NautilusDb;User Id=sa;Password=Your_password123;"
+    "NautilusDatabase": "Server=THE-NAUTILUS;Database=Nautilus-Dev;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
