Create in memory auth repository impelementation

--- a/server/Nautilus.Api/appsettings.Development.json
+++ b/server/Nautilus.Api/appsettings.Development.json
@@ -5,7 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "UseMockDatabase": false,
+  "Backend": {
+    "Type": "memory"
+  },
   "ConnectionStrings": {
     "NautilusDatabase": "Server=THE-NAUTILUS;Database=Nautilus-Dev;Trusted_Connection=True;TrustServerCertificate=True;"
   }
