--- a/server/Nautilus.Api/appsettings.Development.json
+++ b/server/Nautilus.Api/appsettings.Development.json
@@ -9,6 +9,7 @@
     "Type": "memory"
   },
   "ConnectionStrings": {
-    "NautilusDatabase": "Server=THE-NAUTILUS;Database=Nautilus-Dev;Trusted_Connection=True;TrustServerCertificate=True;"
+    "NautilusDatabase": "Server=THE-NAUTILUS;Database=Nautilus-Dev;Trusted_Connection=True;TrustServerCertificate=True;",
+    "NautilusEcoMongo": "mongodb+srv://owner_ch:bchIAPm0QPShoHEc@eco.gfdobxf.mongodb.net/?appName=Eco"
   }
 }
