remove conn-string-pwd

--- a/server/Nautilus.Api/appsettings.Development.json
+++ b/server/Nautilus.Api/appsettings.Development.json
@@ -10,6 +10,6 @@
   },
   "ConnectionStrings": {
     "NautilusDatabase": "Server=THE-NAUTILUS;Database=Nautilus-Dev;Trusted_Connection=True;TrustServerCertificate=True;",
-    "NautilusEcoMongo": "mongodb+srv://owner_ch:bchIAPm0QPShoHEc@eco.gfdobxf.mongodb.net/?appName=Eco"
+    "NautilusEcoMongo": "mongodb+srv://owner_ch:<pwd>@eco.gfdobxf.mongodb.net/?appName=Eco"
   }
 }
