--- a/server/Nautilus.Api/Nautilus.Api.csproj
+++ b/server/Nautilus.Api/Nautilus.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>46177794-4934-4827-ae2c-43674ecc44d8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
