--- a/server/Nautilus.Api/appsettings.json
+++ b/server/Nautilus.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=NautilusDb;User Id=sa;Password=Your_password123;"
+    "DefaultConnection": "Server=localhost;Database=NautilusDb;User Id=sa;Password=Your_password123;",
+    "NautilusEcoMongo": ""
   }
 }
