Implement JWT auth system (with fake placeholder token)

--- a/server/Nautilus.Api/appsettings.json
+++ b/server/Nautilus.Api/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=NautilusDb;User Id=sa;Password=Your_password123;",
     "NautilusEcoMongo": ""
+  },
+  "Jwt": {
+    "SecretKey": "your-secret-key-min-32-characters-long-change-in-production",
+    "Issuer": "Nautilus.Api",
+    "Audience": "Nautilus.Client",
+    "ExpirationDays": 3
   }
 }
