--- a/server/Nautilus.Api/appsettings.Development.json
+++ b/server/Nautilus.Api/appsettings.Development.json
@@ -11,5 +11,11 @@
   "ConnectionStrings": {
     "NautilusDatabase": "Server=THE-NAUTILUS;Database=Nautilus-Dev;Trusted_Connection=True;TrustServerCertificate=True;",
     "NautilusEcoMongo": ""
+  },
+  "Jwt": {
+    "SecretKey": "dev-secret-key-must-be-at-least-32-characters-long-for-security",
+    "Issuer": "Nautilus.Api.Dev",
+    "Audience": "Nautilus.Client.Dev",
+    "ExpirationDays": 3
   }
 }
