Implement email server

--- a/server/Nautilus.Api/appsettings.Development.json
+++ b/server/Nautilus.Api/appsettings.Development.json
@@ -17,5 +17,9 @@
     "Issuer": "Nautilus.Api.Dev",
     "Audience": "Nautilus.Client.Dev",
     "ExpirationDays": 3
+  },
+  "EmailService": {
+    "BaseUrl": "http://localhost:3001",
+    "FrontendUrl": "http://localhost:5173"
   }
 }
