--- a/server/Nautilus.Api/appsettings.json
+++ b/server/Nautilus.Api/appsettings.json
@@ -15,5 +15,9 @@
     "Issuer": "Nautilus.Api",
     "Audience": "Nautilus.Client",
     "ExpirationDays": 3
+  },
+  "EmailService": {
+    "BaseUrl": "http://localhost:3001",
+    "FrontendUrl": "http://localhost:5173"
   }
 }
